Better NodeCollapse outline fix
Set transform origin left so that text alignment stays the same regardless of note length when scaled down. This makes the outline too close on the left side, fixed by increasing left margin while decreasing right margin simultaneously (prevent outline width changing). Right padding on timestamp prevents outline getting too close on right side for 1-line notes that don't line wrap.

On desktop this looks extremely close to old animation (but without alignment issue). On mobile the text position shifts slightly during transition but its subtle and almost looks intentional.

--- a/src/css/timeline.css
+++ b/src/css/timeline.css
@@ -92,13 +92,14 @@
 
     /* Scale down contents when selected */
     &.selected > * {
-        @apply scale-92 md:scale-95;
+        @apply scale-92 ml-3 mr-1 md:scale-95 md:ml-4 md:mr-0;
     }
 }
 
 .note-collapse {
-    @apply m-2 flex flex-row;
+    @apply m-2 flex flex-row origin-left;
     transition: max-height .3s ease-in-out,
+                margin .15s ease-in-out,
                 scale .15s ease-in-out;
 }
 
